--- a/src/app/features/chats/pages/group/group.page.html
+++ b/src/app/features/chats/pages/group/group.page.html
@@ -8,21 +8,51 @@
         <ion-buttons slot="start">
           <ion-back-button defaultHref="/chats"></ion-back-button>
         </ion-buttons>
-        <ion-avatar style="width: 40px; height: 40px">
-          <img [src]="chat.info | photoUrl:chat.info.alt" />
-        </ion-avatar>
-        <ion-title>{{chat.info.displayName}}</ion-title>
+
+        <ion-title>Gruppeninfo</ion-title>
       </div>
     </ion-toolbar>
   </ion-header>
 
   <ion-content>
-    <ion-list class="message-container" *ngIf="message$">
-
-      <!-- <ion-item class="unread">
-            {{unreadMessageRefs.length}} ungelesene Nachrichten
-          </ion-item> -->
+    <div
+      style="
+        display: flex;
+        align-items: center;
+        margin: 2rem;
+        flex-direction: column;
+        gap: 1rem;
+      "
+    >
+      <ion-avatar>
+        <img
+          [src]="chat.info | photoUrl:chat.info.alt"
+          alt="chat.info-profile-picture"
+        />
+      </ion-avatar>
+      <p>{{chat.info.displayName }}</p>
+    </div>
+    <ion-list *ngIf="members$ | async as members">
+      <ion-list-header>
+        <ion-label>Gruppenmitglieder ({{members.length}})</ion-label>
+      </ion-list-header>
+      <ion-item *ngFor="let member of members" (click)="clickMember(member)">
+        <ion-avatar style="margin-right: 2rem">
+          <img
+            [src]="member | photoUrl:member.email"
+            alt="Member Profile Picture"
+          />
+        </ion-avatar>
+        <ion-label style="display: flex; justify-content: space-between">
+          {{member.displayName}}
+          <span *ngIf="member.isAdmin" style="color: var(--ion-color-medium)"
+            >Admin</span
+          >
+        </ion-label>
+      </ion-item>
+      <ion-item (click)="add()" color="primary">
+        <ion-label> Hinzufügen </ion-label>
+      </ion-item>
     </ion-list>
   </ion-content>
-
 </ng-container>
