--- a/src/app/features/chats/pages/single-chat/single-chat.page.html
+++ b/src/app/features/chats/pages/single-chat/single-chat.page.html
@@ -1,17 +1,16 @@
 <ng-container *ngIf="chat$ |async as chat">
   <ion-header>
     <ion-toolbar>
-      <div
-        class="full-width flex align-items-center justify-content-space-between"
-        style="padding: 0 4px"
-      >
+      <div class="full-width flex align-items-center" style="padding: 0 4px">
         <ion-buttons slot="start">
           <ion-back-button defaultHref="/chats"></ion-back-button>
         </ion-buttons>
-        <ion-avatar style="width: 40px; height: 40px">
-          <img [src]="chat.info | photoUrl:chat.info.alt" />
-        </ion-avatar>
-        <ion-title>{{chat.info.displayName}}</ion-title>
+        <div (click)="openGroup(chat.isGroupChat)" class="header">
+          <ion-avatar style="width: 40px; height: 40px">
+            <img [src]="chat.info | photoUrl:chat.info.alt" />
+          </ion-avatar>
+          <ion-title>{{chat.info.displayName}}</ion-title>
+        </div>
       </div>
     </ion-toolbar>
   </ion-header>
