--- a/src/app/features/chats/components/add-to-group/add-to-group.component.html
+++ b/src/app/features/chats/components/add-to-group/add-to-group.component.html
@@ -1,37 +1,59 @@
-<!-- <ion-list
-style="gap: 1rem; background-color: var(--ion-background-color)"
->
-<ion-list-header class="ion-no-padding">
-  <ion-label
-    class="ion-text-center ion-margin-bottom bold text-large"
-    color="dark"
-  >
-    Members ({{ addedMembers.length }} / {{ maxMemberCount }})
-  </ion-label>
-</ion-list-header>
-<ion-searchbar
-  animated
-  (ionChange)="onSearch($event)"
-  debounce="500"
-  class="my-searchbar"
->
-</ion-searchbar>
-<ion-item-group *ngFor="let contactPart of contacts$ | async">
-  <ion-item-divider>
-    <ion-label>{{ contactPart.startingLetter }}</ion-label>
-  </ion-item-divider>
-  <ion-item *ngFor="let contact of contactPart.contacts">
-    <ion-checkbox
-      slot="start"
-      (ionChange)="handleClick($event, contact)"
-      [checked]="addedMembers.includes(contact)"
-    ></ion-checkbox>
-    <ion-avatar>
-      <img [src]="contact | photoUrl: contact.email" />
-    </ion-avatar>
-    <ion-label style="margin-left: 1rem">{{
-      contact.displayName
-    }}</ion-label>
-  </ion-item>
-</ion-item-group>
-</ion-list> -->
+<ion-header translucent>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-button (click)="dismissModal()">Abbrechen</ion-button>
+    </ion-buttons>
+    <ion-title>Mitlgieder hinzufügen</ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="onSubmit()"> Fertig </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-header>
+<ion-content class="ion-padding">
+  <ion-list style="gap: 1rem; background-color: var(--ion-background-color)">
+    <ion-list-header class="ion-no-padding">
+      <ion-label
+        class="ion-text-center ion-margin-bottom bold text-large"
+        color="dark"
+      >
+        Members ({{ addedMembers.length }} /
+        {{ maxMemberCount - membersLength }})
+      </ion-label>
+    </ion-list-header>
+    <ion-searchbar
+      animated
+      (ionChange)="onSearch($event)"
+      debounce="500"
+      class="my-searchbar"
+    >
+    </ion-searchbar>
+    <ion-item-group *ngFor="let contactPart of contacts$ | async">
+      <ion-item-divider>
+        <ion-label>{{ contactPart.startingLetter }}</ion-label>
+      </ion-item-divider>
+      <ion-item *ngFor="let contact of contactPart.contacts">
+        <ion-checkbox
+          slot="start"
+          (ionChange)="handleClick($event, contact)"
+          [checked]="
+            addedMembers.includes(contact) ||
+            maxMemberCount - membersLength - addedMembers.length <= 0
+          "
+        ></ion-checkbox>
+        <ion-avatar>
+          <img [src]="contact | photoUrl: contact.email" />
+        </ion-avatar>
+        <ion-label style="margin-left: 1rem">{{
+          contact.displayName
+        }}</ion-label>
+      </ion-item>
+    </ion-item-group>
+  </ion-list>
+</ion-content>
+<ion-footer>
+  <ion-toolbar>
+    <div
+      class="full-width flex align-items-center justify-content-space-between ion-padding-horizontal"
+    ></div>
+  </ion-toolbar>
+</ion-footer>
