change function region, batches

--- a/src/app/features/chats/pages/group/group.page.html
+++ b/src/app/features/chats/pages/group/group.page.html
@@ -53,6 +53,10 @@
       <ion-item (click)="add()" color="primary">
         <ion-label> Hinzufügen </ion-label>
       </ion-item>
+      <ion-item-divider></ion-item-divider>
+      <ion-item color="danger" (click)="remove()">
+        <ion-label> Gruppe löschen </ion-label>
+      </ion-item>
     </ion-list>
   </ion-content>
 </ng-container>
