--- a/src/app/features/settings/settings.page.html
+++ b/src/app/features/settings/settings.page.html
@@ -32,7 +32,7 @@
     </ion-item>
     <ion-item lines="full">
       <ion-icon slot="start" name="moon"></ion-icon>
-      <ion-label> Dunkled Design </ion-label>
+      <ion-label> Dunkles Design </ion-label>
       <ion-toggle
         id="themeToggle"
         slot="end"
