wip sending private key

--- a/src/app/features/settings/settings.page.html
+++ b/src/app/features/settings/settings.page.html
@@ -42,14 +42,14 @@
     </ion-item>
   </ion-list>
   <ion-button (click)="getToken()" expand="block" style="margin-top: 2rem"
-    >Get Token</ion-button
+    >Get Device Token</ion-button
   >
   <ion-button
     (click)="deleteToken()"
     color="danger"
     expand="block"
     style="margin-top: 2rem"
-    >Delete Token</ion-button
+    >Delete Device Token</ion-button
   >
   <ion-button
     (click)="signOut()"
